# soft-msm

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  pyptoject.toml
results/averaging/: dtw_final_average.csv  msm_final_average.csv
results/classification/: accuracy_mean.csv  balacc_mean.csv
results/clustering/: ami_mean.csv  ari_mean.csv  clacc_mean.csv  inertia_values.csv  nmi_mean.csv
soft_msm/custom_models/: _mlp_forecaster.py
soft_msm/evaluation/: __init__.py  _average_experiment_evaluation.py  _mcm.py  _parse_output_files.py  _visualise_averages.py
soft_msm/experiments/: __init__.py  _averaging_experiment.py  _classification_experiment.py  _classification_models.py  _clustering_experiment.py  _clustering_models.py  _forecasting_experiment.py  _forecasting_models.py  _utils.py
soft_msm/numba/: __init__.py
soft_msm/torch/: __init__.py  _soft_dtw_autograd.py  _soft_dtw_torch.py  _soft_msm_torch.py  _utils.py
soft_msm/torch/tests/: _utils.py  test_soft_dtw_new.py  test_soft_dtw_torch.py  test_soft_msm_torch.py
